fix: adjust color contrast for berries used indicator

--- a/src/app/modules/jukebox/components/queue-video/queue-video.component.scss
+++ b/src/app/modules/jukebox/components/queue-video/queue-video.component.scss
@@ -11,6 +11,7 @@
     padding: 2px 5px;
     margin-left: 10px;
     color: white;
+    font-weight: 700;
     border-radius: 5px;
-    background-color: #FF8E52;
+    background-color: #D14900;
 }
